--- a/client/.env
+++ b/client/.env
@@ -1,4 +1,4 @@
-VITE_BASE_URL = http://localhost:1337
+VITE_BASE_URL = https://chatgpt-realtime-chat-application-api.vercel.app/
 VITE_PROJECT_ID = 5460c1bf-6d75-485e-9fb8-07e680f21987
 
 
